# stratux-esp32

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.bt  sdkconfig.defaults.wifi
components/common/: CMakeLists.txt
components/common/include/: pins.h  pong_frame.h  settings.h  stratux_status.h
components/common/src/: settings.c  stratux_status.c
components/console_cmd/: CMakeLists.txt
components/console_cmd/include/: console_cmd.h
components/console_cmd/src/: console_cmd.c
components/gdl90_out/: CMakeLists.txt
components/gdl90_out/include/: gdl90_out.h
components/gdl90_out/src/: gdl90_out.c
components/modes/: CMakeLists.txt  NOTICE
components/modes/include/: modes.h
components/modes/src/: cpr_store.c  cpr_store.h  crc.c  mode_s_decode.c  mode_s_decode.h  modes.c
components/net/: CMakeLists.txt
components/net/include/: net.h
components/net/src/: net.c
components/pong/: CMakeLists.txt  Kconfig
components/pong/include/: pong.h
components/pong/src/: pong.c
components/traffic/: CMakeLists.txt
components/traffic/include/: traffic.h
components/traffic/src/: traffic.c
components/uat/: CMakeLists.txt  NOTICE
components/uat/include/: uat.h  uat_uplink.h
components/uat/src/: uat.c  uat_decode.c  uat_decode.h  uat_uplink.c
components/web/: CMakeLists.txt
components/web/include/: web.h
components/web/src/: web.c
components/wxstore/: CMakeLists.txt  README.md
docs/: README.md  TESTING.md
main/: CMakeLists.txt  main.c
tools/: README.md  fisb_time.py  gdl90_listen.py  pong_capture.py  pong_capture_format.py  pong_reconstruct.py  pong_replay.py  replay_modes.c  replay_uat.c  replay_uplink.c  test_modes.c  test_uat.c  wifi_config.py
www/: index.html
